datelist calendar view altered
changed activity category badges within day boxes to activity names and capped max length to activity names shown in badges to length of 10.

--- a/plantersinf/planner/templates/planner/datelist.html
+++ b/plantersinf/planner/templates/planner/datelist.html
@@ -98,7 +98,7 @@
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
               <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
-                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
+                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.name}}</li>
                 {%endfor%}
               </ul>
               {%endif%}
@@ -113,7 +113,7 @@
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
               <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
-                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
+                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.name}}</li>
                 {%endfor%}
               </ul>
               {%endif%}
@@ -128,7 +128,7 @@
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
               <ul class="list-group" id='{{date.id}}'>
               {%for act in date.recurring.all%}
-              <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
+              <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.name}}</li>
               {%endfor%}
               </ul>
               {%endif%}
@@ -143,7 +143,7 @@
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
               <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
-                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
+                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.name}}</li>
                 {%endfor%}
               </ul>
               {%endif%}
@@ -158,7 +158,7 @@
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
               <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
-                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
+                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.name}}</li>
                 {%endfor%}
               </ul>
               {%endif%}
@@ -173,7 +173,7 @@
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
               <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
-                <li  class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
+                <li  class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.name}}</li>
                 {%endfor%}
               </ul>
               {%endif%}
@@ -188,7 +188,7 @@
               <a type='button' class="linkbtn btn" href='/date/{{date.id}}' id="{{date.month}}{{date.day}}{{date.year}}" data-toggle='tooltip' data-placement='top' title='Display card' data-month="{{date.month}}" data-year="{{date.year}}" data-day="{{date.day}}">{{date.day}}</a>
               <ul class="list-group" id='{{date.id}}'>
                 {%for act in date.recurring.all%}
-                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}</li>
+                <li class="list-group-item p-0 m-0 rounded shadow activity" style="background-color: {{act.color}}; cursor: pointer;" width="10" id="{{act.id}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.name}}</li>
                 {%endfor%}
               </ul>
               {%endif%}
