--- a/plantersinf/planner/templates/planner/date.html
+++ b/plantersinf/planner/templates/planner/date.html
@@ -129,6 +129,7 @@
 		<div class="p-2 btn btn-link changeDays" href="#" id="prev_{{date.id}}">PREV</div>
 		<div class="p-2">
 			<div class="container text-center date" id="{{date.id}}">
+				<p><h2>{{day}}</h2></p>
 				<p><h2>{{date.month|upper}} {{date.day}} {{date.date}}</h2></p>
 			</div>
 		</div>
