--- a/plantersinf/planner/templates/planner/edit.html
+++ b/plantersinf/planner/templates/planner/edit.html
@@ -174,7 +174,7 @@
 			</form>
 		  </div>
 		  <div class="card-footer text-muted">
-			they call me<a class="btn btn-primary" href="/"> back home</a>
+			<a class="btn btn-primary" href="/"> back home</a>
 		  </div>
 		</div>
     </div>
