--- a/plantersinf/planner/templates/planner/create.html
+++ b/plantersinf/planner/templates/planner/create.html
@@ -163,7 +163,7 @@
 			  </form>
 			</div>
 			<div class="card-footer text-muted">
-			  they call me<a class="btn btn-primary" href="/"> back home</a>
+			  <a class="btn btn-primary" href="/"> back home</a>
 			</div>
 		  </div>
 	  </div>
